# sci-local-operation

./: .gitignore  Makefile  README.md  agent.py  build-windows.ps1  build_pkg.py  config.py  console.html  init.sql  install-windows.ps1  install.sh  menubar_app.py  mq_consumer.py  mq_producer_api.py  mq_sender.py  preflight_check.sh  pyproject.toml  requirements.txt  tray_app_windows.py  uninstall.sh
apps/agent/: main.py
apps/consumer/: main.py
apps/producer/: main.py
core/: __init__.py  config.py  crypto.py  exceptions.py  logging.py  models.py
deploy/: Dockerfile.agent  Dockerfile.consumer  Dockerfile.producer  docker-compose.yml
deploy/.github/workflows/: ci.yml
infra/: __init__.py  database.py  mq.py
tests/: conftest.py
tests/unit/: test_agent.py  test_crypto.py  test_exceptions.py
