[project]
name            = "sci-local-operation"
version         = "1.2.0"
description     = "Shell Agent — macOS 本地 Shell 代理服务"
requires-python = ">=3.11"
readme          = "README.md"

[tool.pytest.ini_options]
testpaths       = ["tests"]
asyncio_mode    = "auto"
addopts         = "-v --tb=short --cov=. --cov-report=term-missing --cov-report=html"
filterwarnings  = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source          = ["core", "infra", "apps"]
omit            = ["tests/*", "*/migrations/*", "deploy/*"]

[tool.coverage.report]
fail_under      = 70
show_missing    = true

[tool.ruff]
line-length     = 100
target-version  = "py311"
select          = ["E", "F", "W", "I"]
ignore          = ["E501"]
exclude         = ["deploy", "*.spec", "build", "dist"]
